--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,10 +60,11 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - assets/logoRegistroLogin.png
-     - assets/botonFacebook.png
-     - assets/botonGoogle.png
-     - assets/botonApple.png
+    - assets/logoRegistroLogin.png
+    - assets/botonFacebook.png
+    - assets/botonGoogle.png
+    - assets/botonApple.png
+    - assets/ChauPhilomeneOne-Regular.ttf
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -77,12 +78,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: ChauPhilomeneOne
+      fonts:
+        - asset: assets/ChauPhilomeneOne-Regular.ttf
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
