TFG_25 Pantalla de home añadida con las vistas de usuarios y de pisos, además de la pantalla de perfil

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ flutter:
     - assets/botonGoogle.png
     - assets/botonApple.png
     - assets/ChauPhilomeneOne-Regular.ttf
+    - assets/mock/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
