--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,11 @@ dependencies:
   google_fonts: ^6.3.1
   google_mobile_ads: ^6.0.0
   in_app_purchase: ^3.2.3
+  flutter_web_auth_2: ^4.1.0
+  crypto: ^3.0.3
+  http: ^1.2.2
+  url_launcher: ^6.3.2
+  app_links: ^6.4.1
 
 dev_dependencies:
   flutter_test:
@@ -77,6 +82,7 @@ flutter:
     - assets/botonApple.png
     - assets/ChauPhilomeneOne-Regular.ttf
     - assets/mock/
+    - assets/teams/la_liga/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
