CR_25-26 Mejoras + nuevas funcionalidades

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -48,12 +48,15 @@
 	<key>CFBundleURLTypes</key>
     <array>
       <dict>
+        <key>CFBundleTypeRole</key>
+        <string>Editor</string>
         <key>CFBundleURLSchemes</key>
         <array>
-          <string>chillroom</string>
+          <string>crspot</string>
         </array>
       </dict>
     </array>
+
 
 </dict>
 </plist>
