--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -56,6 +56,18 @@
         </array>
       </dict>
     </array>
+    <key>CFBundleURLTypes</key>
+    <array>
+      <dict>
+        <key>CFBundleURLName</key>
+        <string>chillroom</string>
+        <key>CFBundleURLSchemes</key>
+        <array>
+          <string>chillroom</string>
+        </array>
+      </dict>
+    </array>
+
 
 
 </dict>
