--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,13 +37,15 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   google_fonts: ^6.3.1
-  google_mobile_ads: ^6.0.0
+  stack_appodeal_flutter: ^3.10.0
   in_app_purchase: ^3.2.3
   flutter_web_auth_2: ^4.1.0
   crypto: ^3.0.3
   http: ^1.2.2
   url_launcher: ^6.3.2
   app_links: ^6.4.1
+  share_plus: ^11.1.0
+
 
 dev_dependencies:
   flutter_test:
