CR_25-26 Notificaciones añadidas + diversos ficheros nuevos

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -67,6 +67,13 @@
         </array>
       </dict>
     </array>
+    <key>UIBackgroundModes</key>
+    <array>
+      <string>processing</string>
+      <string>fetch</string>
+    </array>
+    <key>NSUserNotificationUsageDescription</key>
+    <string>Esta app quiere enviarte notificaciones.</string>
 
 
 
