--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: chillroom
+name: Chillroom
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -45,6 +45,8 @@ dependencies:
   url_launcher: ^6.3.2
   app_links: ^6.4.1
   share_plus: ^11.1.0
+  onesignal_flutter: ^5.3.4
+  flutter_local_notifications: ^19.4.2
 
 
 dev_dependencies:
@@ -63,6 +65,12 @@ flutter_icons:
   android: true
   ios: true
   image_path: "assets/logo.png"
+  # Recomendado para Android: icono adaptativo
+  adaptive_icon_background: "#FFFFFF"   # o una imagen: "assets/icon_bg.png"
+  adaptive_icon_foreground: "assets/logo.png"  # ideally un foreground sin fondo
+  min_sdk_android: 21
+  # Recomendado para iOS (quita canal alfa)
+  remove_alpha_ios: true
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -78,6 +86,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/logoRegistroLogin.png
+    - assets/logo.png
     - assets/chillroom.png
     - assets/botonFacebook.png
     - assets/botonGoogle.png
@@ -90,6 +99,9 @@ flutter:
     # Fútbol (escudos por ligas o categorías)
     - assets/teams/la_liga/
     - assets/teams/premier_league/
+
+    - assets/social/
+    - assets/marketplaces/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
