--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -74,6 +74,8 @@
     </array>
     <key>NSUserNotificationUsageDescription</key>
     <string>Esta app quiere enviarte notificaciones.</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>Necesitamos acceso al micrófono para notas de voz.</string>
 
 
 
