--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: Chillroom
+name: chillroom
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -47,6 +47,9 @@ dependencies:
   share_plus: ^11.1.0
   onesignal_flutter: ^5.3.4
   flutter_local_notifications: ^19.4.2
+  record: ^6.1.2
+  path_provider: ^2.1.5
+  audioplayers: ^6.5.1
 
 
 dev_dependencies:
